# harmony

./: .RData  .Rbuildignore  .Rhistory  .gitignore  .travis.yml  CRAN-SUBMISSION  DESCRIPTION  Example.ipynb  LICENSE  NAMESPACE  NEWS  PERFORMANCE.md  README.md  Untitled.ipynb  appveyor.yml  cleanup  cleanup.win  config.status  configure  configure.ac  configure.win  cran-comments.md  harmony_0.0.0.9000.tar.gz.REMOVED.git-id
.ipynb_checkpoints/: DESCRIPTION-checkpoint  Example-checkpoint.ipynb  README-checkpoint.md  Untitled-checkpoint.ipynb
R/: HarmonyConvergencePlot.R  HarmonyMatrix.R  RcppExports.R  RunHarmony.R  data.R  harmonize.R  harmony-package.R  harmony-package.r  harmony_option.R  module_loader.R  onehot.R  ui.R  utils.R  zzz.R
data/: cell_lines.rda  cell_lines_small.RData  cell_lines_small_sce.RData  cell_lines_small_seurat.RData  cell_lines_small_seurat_v2.RData  cell_lines_small_seurat_v3.RData  celllines.RData  pbmc_stim.RData  pbmc_stim.RData.REMOVED.git-id
doc/: Seurat.R  Seurat.Rmd  Seurat.html  detailedWalkthrough.R  detailedWalkthrough.html  parameters.R  parameters.Rmd  parameters.html  quickstart.R  quickstart.Rmd  quickstart.html
docs/: SeuratV2.html  SeuratV3.html  advanced.html  getting_started.md  index.md  mudan.html
man/: HarmonyConvergencePlot.Rd  HarmonyMatrix.Rd  RunHarmony.Rd  RunHarmony.Seurat.Rd  RunHarmony.SingleCellExperiment.Rd  RunHarmony.default.Rd  cell_lines.Rd  cell_lines_small.Rd  cell_lines_small_sce.Rd  cell_lines_small_seurat.Rd  cell_lines_small_seurat_v2.Rd  cell_lines_small_seurat_v3.Rd  ctrl.sparse.Rd  harmony.Rd  (+10 more)
(+41 files in other folders)
